--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;900&display=swap');
+
+*{
+  box-sizing: border-box;
+  font-family: "Rubik", sans-serif;
+  color: #393c41;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+	width: 100%;
+	overflow-x: hidden;
+}
+body.hideScroll{
+	overflow: hidden;
+}
+
+a{
+	text-decoration: none;
+}
+
+@keyframes animationDown{
+	0%, 20%, 50%, 80%, 100% {
+		transform: translateY(0);
+	}
+	40%{
+		transform: translateY(5px);
+	}
+	60%{
+		transform: translateY(3px);
+	}
 }
